<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">My Recipes</string>
    <string name="whatsapp_message">WhatsApp application is not installed on your phone.</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="telephone_number">Telephone No</string>
    <string name="birth_date">Birth Date</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="saved_toast">Saved</string>
    <string name="empty_toast">Please fill in the blank fields</string>
    <string name="gender">Gender</string>
    <string name="e_mail">E-mail</string>
    <string name="permisson_desc">Allow access to photos</string>
    <string name="dialog_desc">Please Choose</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="error_image_desc">There was an error capturing the image</string>
    <string name="cancelled">Cancelled</string>
    <string name="required_field">Required Area</string>
    <string name="save">Save</string>
    <string name="ingredients">Ingredients</string>
    <string name="directions">Directions</string>
    <string name="title">Write a Title Here</string>
    <string name="minute">Mn</string>
    <string name="prep_time">Prep.\n Time</string>
    <string name="serve_time">Serve\n Time</string>
    <string name="choose">Please Choose</string>
    <string name="saved">Saved</string>
    <string name="culinary">My Recipes</string>
    <string name="note_desc">You don\'t have a note yet</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="gmail">Mail</string>
    <string name="send_mail">Send Mail</string>
    <string name="delete">Are you sure to delete?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="data_not_found">Data not Found</string>
    <string name="example_number">(555) 555 55 55</string>
    <string name="error_desc">Please fill at least one field.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="message_for_title">Please write some recipes.</string>
    <string name="not_saved">There was a problem</string>
    <string name="loading">Loading</string>
    <string-array name="Gender">
        <item>Female</item>
        <item>Male</item>
    </string-array>
    <string-array name="Time">
        <item>Mn</item>
        <item>Hour</item>
    </string-array>
    <string-array name="Numbers">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
        <item>35</item>
        <item>40</item>
        <item>45</item>
        <item>50</item>
        <item>55</item>
        <item>60</item>
        <item>65</item>
        <item>70</item>
        <item>75</item>
        <item>80</item>
        <item>85</item>
        <item>90</item>
        <item>95</item>
        <item>100</item>
        <item>105</item>
        <item>110</item>
        <item>120</item>
        <item>130</item>
        <item>140</item>
        <item>150</item>
        <item>160</item>
        <item>170</item>
        <item>180</item>

    </string-array>
    <string-array name="days">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
    <string-array name="months">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="years">
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
    </string-array>
</resources>